<resources>
    <string name="app_name">FHIR Reference </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FHIR Starter App</string>
    <string name="nav_header_subtitle">FHIR Made Simple</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Patients</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="base_url">http://45.79.161.190/api/</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="telephone">Telephone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register Here</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="county">County</string>
    <string name="designation">Designation</string>

</resources>